--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -3,6 +3,7 @@
   <head >
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Welfare relief measures announced by states to deal with COVID 19</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="script.js"></script>
   
