--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -14,6 +14,7 @@
   
   <body>
         <select id="state-box">
+            <option value="">All States</option>
         </select>
     <div class="table-responsive-md">
 		<table class="dislay table table-bordered table-striped table-hover" id="orderTable">
@@ -24,7 +25,7 @@
 			  <th>State</th>
 			  <th>Source</th>
 			  <th>Date of Order</th>
-			  <th>Issued By</th>
+			  <th>Issues By</th>
 			</tr>
 		  </thead>
 		  <!-- Table head -->
