--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -2,42 +2,50 @@
 <html lang="en-US">
   <head >
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>COVID-19 Relief Measure Order Tracker</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.20/r-2.2.3/datatables.min.css"/>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
-  <script src="script.js"></script>
+
+  <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.20/r-2.2.3/datatables.min.js"></script>
+  <script type="text/javascript" charset="utf8" src="script.js"></script>
   
   <body>
-        <select id="state-box">
-            <option value="">All States</option>
-        </select>
-    <div class="table-responsive-md">
-		<table class="dislay table table-bordered table-striped table-hover" id="orderTable">
-		  <!-- Table head -->
-		  <thead>
-			<tr>
-			  <th></th>
-			  <th>State</th>
-			  <th>Source</th>
-			  <th>Date of Order</th>
-			  <th>Issues By</th>
-			</tr>
-		  </thead>
-		  <!-- Table head -->
+    <select id="state-box">
+        <option value="">All States</option>
+    </select>
+	<table class="dislay responsive nowrap table table-bordered table-striped table-hover" width="100%" id="orderTable">
+	  <!-- Table head -->
+	  <thead>
+		<tr>
+          <th style="width:5px;"></th>
+          <th class="meddesktop mobilep">State</th>
+          <th class="meddesktop">Date of Order</th>
+          <th class="meddesktop">Issued By</th>
+          <th class="meddesktop">Source</th>
+          <th>Food (including PDS)</th>
+          <th>MDM+ICDS</th>
+          <th>Pensions</th>
+          <th>Income Support</th>
+          <th>Health</th>
+          <th>Transport</th>
+          <th>Migrants</th>
+          <th>Worker/Employee Related</th>
+          <th>Farmers</th>
+          <th>Undertrials and Prison</th>
+          <th>Other Relief</th>
+          <th>Comments</th>
+          <th>Link to the Order</th>
+		</tr>
+	  </thead>
+	  <!-- Table head -->
 
-		  <!-- Table body -->
-		  <tbody id="orderData">
-
-		  
-		  </tbody>
-		  <!-- Table body -->
-		</table>
-		<!-- Table  -->
-	</div>
+	  <!-- Table body -->
+	  <tbody id="orderData">
+	  </tbody>
+	  <!-- Table body -->
+	</table>
+	<!-- Table  -->
   </body>
  </html>
