Hide vertical scroll bar

--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -20,8 +20,8 @@
 	  <thead>
 		<tr>
           <th style="width:5px;"></th>
-          <th class="meddesktop mobilep">State</th>
-          <th class="meddesktop">Date of Order</th>
+          <th class="meddesktop mobilep mobilel tabletp">State</th>
+          <th class="meddesktop mobilel tabletp">Date of Order</th>
           <th class="meddesktop">Issued By</th>
           <th class="meddesktop">Source</th>
           <th>Food (including PDS)</th>
