Add second filtering dropdown

--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -12,9 +12,18 @@
   <script type="text/javascript" charset="utf8" src="script.js"></script>
   
   <body>
-    <select id="state-box">
-        <option value="">All States</option>
-    </select>
+    <div class = "row">
+        <div class="col-sm-6">
+            <select id="state-box">
+                <option value="">All States</option>
+            </select>
+        </div>
+        <div class="col-sm-6">
+            <select id="date-box">
+                <option value="">All Dates</option>
+            </select>
+        </div>
+    </div>
 	<table class="dislay responsive nowrap table table-bordered table-striped table-hover" width="100%" id="orderTable">
 	  <!-- Table head -->
 	  <thead>
