--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -56,5 +56,6 @@
 	  <!-- Table body -->
 	</table>
 	<!-- Table  -->
+  <div style="margin:'auto';text-align: center;">This is only an order aggregrator website. None of the views expressed in these documents are endorsed or mirrored by the admins or maintainer of the website. Please check the official Government notifications for orders.</div>
   </body>
  </html>
