Add dropbox for Issues

--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -19,8 +19,8 @@
             </select>
         </div>
         <div class="col-sm-6">
-            <select id="date-box">
-                <option value="">All Dates</option>
+            <select id="issue-box">
+                <option value="">All Issues</option>
             </select>
         </div>
     </div>
@@ -30,15 +30,16 @@
 		<tr>
           <th style="width:5px;"></th>
           <th class="meddesktop mobilep mobilel tabletp">State</th>
-          <th class="meddesktop mobilel tabletp">Date of Order</th>
+          <th class="meddesktop">Date of Order</th>
+          <th class="meddesktop mobilel tabletp">Issues</th>
           <th class="meddesktop">Issued By</th>
-          <th class="meddesktop">Source</th>
+          <th class="">Source</th>
           <th>Food (including PDS)</th>
           <th>MDM+ICDS</th>
           <th>Pensions</th>
           <th>Income Support</th>
           <th>Health</th>
-          <th>Transport</th>
+          <th>Medicine</th>
           <th>Migrants</th>
           <th>Worker/Employee Related</th>
           <th>Farmers</th>
