Allow filtering via query strings

--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -33,7 +33,7 @@
           <th class="meddesktop">Date of Order</th>
           <th class="meddesktop mobilel tabletp">Issues</th>
           <th class="meddesktop">Issued By</th>
-          <th class="">Source</th>
+          <th>Source</th>
           <th>Food (including PDS)</th>
           <th>MDM+ICDS</th>
           <th>Pensions</th>
