--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -58,6 +58,20 @@
 	</table>
 	<!-- Table  -->
   <br>
-  <div style="margin:'auto';text-align: center;">This is only an order aggregrator website. None of the views expressed in these documents are endorsed or mirrored by the admins or maintainer of the website. Please check the official Government notifications for orders.</div>
+  <p style="margin:'auto';text-align: center;">
+    <a class="btn btn-primary" data-toggle="collapse" href="#request" role="button" aria-expanded="false" aria-controls="request" onClick='$("html, body").animate({ scrollTop: $(document).height() }, "slow");'>Request in Public Interest</a>
+    <a class="btn btn-primary" data-toggle="collapse" href="#disclaimer" role="button" aria-expanded="false" onClick='$("html, body").animate({ scrollTop: $(document).height() }, "slow");'>Disclaimer</a>
+  </p>
+  <div class="collapse" id="request">
+    <div class="card card-body">
+      <div style="margin:'auto';text-align: center;">While utmost care has been taken while uploading the orders/circulars/notifications/notices as issued by the various State and Central Govt.’s from time to time in relation to COVID-19, however, we are extremely sorry for any discrepancy found therein. If you find any discrepancy, issue, wish to report any anomaly, or send any additional information that may be added here, kindly send the information, suggestions and grievances to <a href="mailto:someone@example.com" target="_top">legal.cso@gmail.com</a>.</div>
+    </div>
+  </div>
+  <div class="collapse" id="disclaimer">
+    <div class="card card-body">
+      <div style="margin:'auto';text-align: center;">This web portal only lists the various Government orders/notifications/circulars/notices, issued by various State Govt.’s and Central Govt. issued from time to time in relation to  COVID-19 and is hosted here only for purposes of general public awareness, information and research. The web portal does not undertake any responsibility of the correctness or truthfulness of the contents of these govt. orders. Visitors are advised to visit the respective official govt. department to verify the information provided in such orders/notifications/circulars/notices.</div>
+    </div>
+  </div>
+
   </body>
  </html>
