Update button text

--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -59,10 +59,10 @@
 	<!-- Table  -->
   <br>
   <p style="margin:'auto';text-align: center;">
-    <a class="btn btn-primary" data-toggle="collapse" href="#request" role="button" aria-expanded="false" aria-controls="request" onClick='$("html, body").animate({ scrollTop: $(document).height() }, "slow");'>Request in Public Interest</a>
+    <a class="btn btn-primary" data-toggle="collapse" href="#contact" role="button" aria-expanded="false" aria-controls="contact" onClick='$("html, body").animate({ scrollTop: $(document).height() }, "slow");'>Contact Us</a>
     <a class="btn btn-primary" data-toggle="collapse" href="#disclaimer" role="button" aria-expanded="false" onClick='$("html, body").animate({ scrollTop: $(document).height() }, "slow");'>Disclaimer</a>
   </p>
-  <div class="collapse" id="request">
+  <div class="collapse" id="contact">
     <div class="card card-body">
       <div style="margin:'auto';text-align: center;">While utmost care has been taken while uploading the orders/circulars/notifications/notices as issued by the various State and Central Govt.’s from time to time in relation to COVID-19, however, we are extremely sorry for any discrepancy found therein. If you find any discrepancy, issue, wish to report any anomaly, or send any additional information that may be added here, kindly send the information, suggestions and grievances to <a href="mailto:someone@example.com" target="_top">legal.cso@gmail.com</a>.</div>
     </div>
