Show Date of Order on medum sized desktop

--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -12,6 +12,9 @@
   <script type="text/javascript" charset="utf8" src="script.js"></script>
   
   <body>
+
+    <h1 style="margin:'auto';text-align: center;">COVID-19 MEASURES GOVERNMENT ORDERS</h1>
+    <br />
     <div class = "row">
         <div class="col-sm-6">
             <select id="state-box">
@@ -30,7 +33,7 @@
 		<tr>
           <th style="width:5px;"></th>
           <th class="meddesktop mobilep mobilel tabletp">State</th>
-          <th>Date of Order</th>
+          <th class="meddesktop">Date of Order</th>
           <th class="meddesktop mobilel tabletp">Issues</th>
           <th class="meddesktop">Issued By</th>
           <th>Source</th>
