--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -33,8 +33,8 @@
 		<tr>
           <th style="width:5px;"></th>
           <th class="meddesktop mobilep mobilel tabletp">State</th>
-          <th class="smalldesktop">Date of Order</th>
           <th class="meddesktop mobilel tabletp">Issues</th>
+          <th class="smalldesktop mobilel">Date of Order</th>
           <th class="meddesktop">Issued By</th>
           <th>Source</th>
           <th>Food (including PDS)</th>
