--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -14,10 +14,9 @@
   <body>
 
     <h1 style="margin:'auto';text-align: center;">COVID-19 MEASURES GOVERNMENT ORDERS</h1>
-    <br />
     <div class = "row">
-        <div class="col-sm-6">
-            <select id="state-box">
+        <div class="col-md-6">
+            <select id="state-box" class="pull-left">
                 <option value="">All States</option>
             </select>
         </div>
