Add border and margin to drop down

--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -15,7 +15,7 @@
 
     <h1 style="margin:'auto';text-align: center;">COVID-19 MEASURES GOVERNMENT ORDERS</h1>
     <div class = "row">
-        <div class="col-md-6">
+        <div class="col-sm-6">
             <select id="state-box" class="pull-left">
                 <option value="">All States</option>
             </select>
