--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -6,9 +6,11 @@
   <title>COVID-19 Relief Measure Order Tracker</title>
   
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.20/r-2.2.3/datatables.min.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.2/css/fixedHeader.dataTables.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 
   <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.20/r-2.2.3/datatables.min.js"></script>
+  <script type="text/javascript" src="https://cdn.datatables.net/fixedheader/3.1.6/js/dataTables.fixedHeader.min.js"></script>
   <script type="text/javascript" charset="utf8" src="script.js"></script>
   
   <body>
@@ -31,10 +33,10 @@
 	  <thead>
 		<tr>
           <th style="width:5px;"></th>
-          <th class="meddesktop mobilep mobilel tabletp">State</th>
-          <th class="meddesktop mobilel tabletp">Issues</th>
-          <th class="smalldesktop mobilel">Date</th>
-          <th class="meddesktop">Issued By</th>
+          <th class="meddesktop smalldesktop mobilep mobilel tabletp">State</th>
+          <th class="meddesktop smalldesktop mobilel tabletp">Issues</th>
+          <th class="meddesktop smalldesktop mobilel tabletp">Date</th>
+          <th class="meddesktop smalldesktop tabletp">Issued By</th>
           <th>Source</th>
           <th>Food (including PDS)</th>
           <th>MDM+ICDS</th>
