--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -28,7 +28,7 @@
             </select>
         </div>
     </div>
-	<table class="dislay responsive nowrap table table-bordered table-striped table-hover" width="100%" id="orderTable">
+	<table class="dislay responsive nowrap table table-bordered table-striped table-hover" id="orderTable">
 	  <!-- Table head -->
 	  <thead>
 		<tr>
