--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -9,73 +9,60 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.2/css/fixedHeader.dataTables.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 
+
+  <script src="https://cdn.jsdelivr.net/npm/tabletop@1.6.2/src/tabletop.min.js"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.20/r-2.2.3/datatables.min.js"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/fixedheader/3.1.6/js/dataTables.fixedHeader.min.js"></script>
   <script type="text/javascript" charset="utf8" src="script.js"></script>
   
   <body>
+    <div id="loader"></div>
 
-    <h1 style="margin:'auto';text-align: center;">COVID-19 MEASURES GOVERNMENT ORDERS</h1>
-    <div class = "row">
-        <div class="col-sm-6">
-            <select id="state-box" class="pull-left">
-                <option value="">All States</option>
-            </select>
+    <div id="full-container">
+      <h1 style="margin:'auto';text-align: center;">COVID-19 MEASURES GOVERNMENT ORDERS</h1>
+      <div class="row">
+          <div class="col-sm-6">
+              <select id="state-box" class="pull-left">
+                  <option value="">All States</option>
+              </select>
+          </div>
+          <div class="col-sm-6">
+              <select id="issue-box">
+                  <option value="">All Issues</option>
+              </select>
+          </div>
+      </div>
+
+  	<table class="dislay responsive nowrap table table-bordered table-striped table-hover" width="100%" id="orderTable">
+  	  <!-- Table head -->
+  	  <thead>
+  		<tr id="firstRow">
+        <th style="width:5px;"></th>
+  		</tr>
+    	  </thead>
+    	  <!-- Table head -->
+
+    	  <!-- Table body -->
+    	  <tbody id="orderData">
+    	  </tbody>
+    	  <!-- Table body -->
+    	</table>
+    	<!-- Table  -->
+      <br>
+      <p style="margin:'auto';text-align: center;">
+        <a class="btn btn-primary" data-toggle="collapse" href="#contact" role="button" aria-expanded="false" aria-controls="contact" onClick='$("html, body").animate({ scrollTop: $(document).height() }, "slow");'>Contact Us</a>
+        <a class="btn btn-primary" data-toggle="collapse" href="#disclaimer" role="button" aria-expanded="false" onClick='$("html, body").animate({ scrollTop: $(document).height() }, "slow");'>Disclaimer</a>
+      </p>
+      <div class="collapse" id="contact">
+        <div class="card card-body">
+          <div style="margin:'auto';text-align: center;">While utmost care has been taken while uploading the orders/circulars/notifications/notices as issued by the various State and Central Govt.’s from time to time in relation to COVID-19, however, we are extremely sorry for any discrepancy found therein. If you find any discrepancy, issue, wish to report any anomaly, or send any additional information that may be added here, kindly send the information, suggestions and grievances to <a href="mailto:someone@example.com" target="_top">legal.cso@gmail.com</a>.</div>
         </div>
-        <div class="col-sm-6">
-            <select id="issue-box">
-                <option value="">All Issues</option>
-            </select>
+      </div>
+      <div class="collapse" id="disclaimer">
+        <div class="card card-body">
+          <div style="margin:'auto';text-align: center;">This web portal only lists the various Government orders/notifications/circulars/notices, issued by various State Govt.’s and Central Govt. issued from time to time in relation to  COVID-19 and is hosted here only for purposes of general public awareness, information and research. The web portal does not undertake any responsibility of the correctness or truthfulness of the contents of these govt. orders. Visitors are advised to visit the respective official govt. department to verify the information provided in such orders/notifications/circulars/notices.</div>
         </div>
+      </div>
     </div>
-	<table class="dislay responsive nowrap table table-bordered table-striped table-hover" width="100%" id="orderTable">
-	  <!-- Table head -->
-	  <thead>
-		<tr>
-          <th style="width:5px;"></th>
-          <th class="meddesktop smalldesktop mobilep mobilel tabletp">State</th>
-          <th class="meddesktop smalldesktop mobilel tabletp">Issues</th>
-          <th class="meddesktop smalldesktop mobilel tabletp">Date</th>
-          <th class="meddesktop smalldesktop tabletp">Issued By</th>
-          <th>Source</th>
-          <th>Food (including PDS)</th>
-          <th>MDM+ICDS</th>
-          <th>Pensions</th>
-          <th>Income Support</th>
-          <th>Health</th>
-          <th>Medicine</th>
-          <th>Migrants</th>
-          <th>Worker/Employee Related</th>
-          <th>Farmers</th>
-          <th>Undertrials and Prison</th>
-          <th>Other Relief</th>
-          <th>Comments</th>
-          <th>Link to the Order</th>
-		</tr>
-	  </thead>
-	  <!-- Table head -->
-
-	  <!-- Table body -->
-	  <tbody id="orderData">
-	  </tbody>
-	  <!-- Table body -->
-	</table>
-	<!-- Table  -->
-  <br>
-  <p style="margin:'auto';text-align: center;">
-    <a class="btn btn-primary" data-toggle="collapse" href="#contact" role="button" aria-expanded="false" aria-controls="contact" onClick='$("html, body").animate({ scrollTop: $(document).height() }, "slow");'>Contact Us</a>
-    <a class="btn btn-primary" data-toggle="collapse" href="#disclaimer" role="button" aria-expanded="false" onClick='$("html, body").animate({ scrollTop: $(document).height() }, "slow");'>Disclaimer</a>
-  </p>
-  <div class="collapse" id="contact">
-    <div class="card card-body">
-      <div style="margin:'auto';text-align: center;">While utmost care has been taken while uploading the orders/circulars/notifications/notices as issued by the various State and Central Govt.’s from time to time in relation to COVID-19, however, we are extremely sorry for any discrepancy found therein. If you find any discrepancy, issue, wish to report any anomaly, or send any additional information that may be added here, kindly send the information, suggestions and grievances to <a href="mailto:someone@example.com" target="_top">legal.cso@gmail.com</a>.</div>
-    </div>
-  </div>
-  <div class="collapse" id="disclaimer">
-    <div class="card card-body">
-      <div style="margin:'auto';text-align: center;">This web portal only lists the various Government orders/notifications/circulars/notices, issued by various State Govt.’s and Central Govt. issued from time to time in relation to  COVID-19 and is hosted here only for purposes of general public awareness, information and research. The web portal does not undertake any responsibility of the correctness or truthfulness of the contents of these govt. orders. Visitors are advised to visit the respective official govt. department to verify the information provided in such orders/notifications/circulars/notices.</div>
-    </div>
-  </div>
-
   </body>
  </html>
