Query striings now also take column index as keys
* Allow width to be dynimacally calculated
* Bettter support for columns with very long text
* Better support for tables with less number of columns
* Allow quotes in dropdown.

--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -23,7 +23,7 @@
       <div class="row">
           <div class="col-sm-6">
               <select id="state-box" class="pull-left">
-                  <option value="">All States</option>
+                  <option value="">All States & Center</option>
               </select>
           </div>
           <div class="col-sm-6">
@@ -33,7 +33,7 @@
           </div>
       </div>
 
-  	<table class="dislay responsive nowrap table table-bordered table-striped table-hover" width="100%" id="orderTable">
+  	<table class="dislay responsive table-responsive table table-bordered table-striped table-hover" width="100%" id="orderTable">
   	  <!-- Table head -->
   	  <thead>
   		<tr id="firstRow">
