--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col-sm-6">
             <select id="state-box" class="pull-left">
-                <option value="">All States & Center</option>
+                <option value="">All States & Centre</option>
             </select>
         </div>
         <div class="col-sm-6">
@@ -51,9 +51,14 @@
       <div class="collapse" id="contact">
         <div class="card card-body">
           <div style="margin:'auto';text-align: center;">While utmost care has been taken while uploading the orders/circulars/notifications/notices as issued by the various State and Central Govt.’s from time to time in relation to COVID-19, however, we are extremely sorry for any discrepancy found therein. If you find any discrepancy, issue, wish to report any anomaly, or send any additional information that may be added here, kindly send the information, suggestions and grievances to <a href="mailto:someone@example.com" target="_top">legal.cso@gmail.com</a>.
+
           <br />
           <br />
-          Or contact us on twitter at: <a href="https://twitter.com/jeevika_shiv/">@jeevika_shiv</a> | <a href="https://twitter.com/AninditaAdhik13/">@AninditaAdhik13</a> | <a href="https://twitter.com/ity_adi">@ity_adi</a></div>
+
+          Or contact us on twitter at: <a href="https://twitter.com/jeevika_shiv/">Jeevika Shiv (@jeevika_shiv)</a> | <a href="https://twitter.com/AninditaAdhik13/">Anindita Adhikari (@AninditaAdhik13)</a> | <a href="https://twitter.com/ity_adi">Aditya Shrivastava (@ity_adi)</a>
+
+          <br />
+          The summaries of all the order on this page can be accessed at: <a id="back-link" target="_blank"></a></div>
         </div>
       </div>
       <div class="collapse" id="disclaimer">
