--- a/covid-order/index.html
+++ b/covid-order/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="0;url=https://covid-india.in">
+    <!--<meta http-equiv="refresh" content="0;url=https://covid-india.in">-->
     <title>COVID-19 Relief Measure Order Tracker</title>
     
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4-4.1.1/jq-3.3.1/dt-1.10.20/r-2.2.3/datatables.min.css"/>
